name:                halvm-web
version:             0.3.0.0
synopsis:            A simple, static HaLVM web server
description:         A simple, static HaLVM web server
homepage:            http://halvm.org
license:             BSD3
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@galois.com
copyright:           2016, Adam Wick
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag force-hans
  Description: Force the use of HaNS on a tap device
  Default: False

executable halvm-web
  main-is:             Main.hs
  other-modules:       Backend, HTTP, Syslog
  other-extensions:    CPP, MultiWayIf
  build-depends:       async       >= 2.1.0    && < 2.3.0,
                       attoparsec  >= 0.13.1   && < 1.16,
                       base        >= 4.7      && < 4.11,
                       bytestring  >= 0.10.4   && < 0.12.0,
                       cereal      >= 0.5.3    && < 0.8,
                       containers  >= 0.5.5.1  && < 0.8,
                       filepath    >= 1.4.1    && < 1.8,
                       hans        >= 3.0.2    && < 3.4.0,
                       mime-types  >= 0.1.0.7  && < 0.4,
                       network-uri >= 2.6.1.0  && < 2.9,
                       simple-tar  >= 0.5      && < 0.9,
                       text        >= 1.2.2.1  && < 1.5,
                       time        >= 1.6.0    && < 1.9

  if os(HaLVM)
    other-modules:     Backend.Hans.Common
                       Backend.Hans.HaLVM
    build-depends:     HALVMCore   >= 2.0.0    && < 2.2.0,
                       XenDevice   >= 2.0.0    && < 2.2.0
  else
    if flag(force-hans)
      ghc-options:     -threaded
      cpp-options:     -DFORCE_HANS
      other-modules:   Backend.Hans.Common
                       Backend.Hans.POSIX
                       POSIXArgs
      build-depends:   directory   >= 1.3.0    && < 1.7
    else
      ghc-options:     -threaded
      other-modules:   Backend.Network
                       POSIXArgs
      build-depends:   directory   >= 1.3.0    && < 1.7,
                       network     >= 2.6      && < 2.9

  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
